--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,8 @@
-* linguist-vendored
+linguist-vendored
 *.c linguist-vendored=false
+*.h linguist-vendored=false
+
+*.html linguist-vendored
+*.css linguist-vendored
+*.js linguist-vendored
+
